# mergil

./: Cargo.toml  README.md  flake.nix
src/: api.rs  common.rs  editor.rs  input.rs  lib.rs  main.rs  markdown.rs
tests/: integration_tests.rs
tests/common/: setup.rs
tests/integration/: api_integration_tests.rs
tests/unit/: api_tests.rs  common_tests.rs  input_tests.rs  main_tests.rs  markdown_tests.rs  mod.rs
