[package]
name = "mergil"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3.30"
indicatif = "0.17.8"
pulldown-cmark = "0.11.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
termimad = "0.29.4"
tokio = { version = "1.38.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.15"
