[package]
name = "mergil"
version = "0.1.0"
edition = "2021"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[dependencies]
assert_cmd = "2.0.14"
atty = "0.2.14"
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3.30"
predicates = "3.1.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
std_prelude = "0.2.12"
tempfile = "3.10.1"
termimad = "0.29.4"
tokio = { version = "1.38.0", features = ["full"] }
wiremock = "0.6.0"
